# code

./: .dockerignore  .editorconfig  .env  .eslintignore  .eslintrc.cjs  .eslintrc.js  .eslintrc.json  .gitattributes  .gitignore  .gitmodules  .npmignore  .npmrc  .prettierignore  .prettierrc  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  COPYING.md  Cargo.toml  Dockerfile  LICENSE  LICENSE.md  PR_DESC.md  README.md  SECURITY.md  _typos.toml  aditude.diff  app.vue  build.bat  build.rs  changes.patch  clippy.toml  crowdin.yml  docker-compose.example.yml  docker-compose.yml  error.vue  flake.nix  gridsome.config.js  mdsvex.config.js  nuxt.config.js  (+29 more)
apps/app/: .eslintrc.json  .gitignore  .prettierignore  COPYING.md  Cargo.toml  Info.plist  README.md  build.rs  package.json  tauri-release.conf.json  tauri-release.conf.json5  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tsconfig.json  turbo.jsonc  vite.config.ts
apps/app-playground/: Cargo.toml  link_test.html  package.json
apps/app-playground/.cargo/: config.toml
apps/app-playground/src/: main.rs
apps/app/.cargo/: config.toml
apps/app/capabilities/: ads.json  core.json  plugins.json  updater.json
apps/app/icons/: icon.icns
apps/app/nsis/: hooks.nsi
apps/app/src/: App.vue  error.rs  main.js  main.rs  routes.js  update_size_checker.rs  updater_impl.rs  updater_impl_noop.rs
apps/app/src-tauri/: Cargo.toml  tauri.conf.json
apps/ariadne-extract/: Cargo.toml  package.json
apps/ariadne-extract/src/: error.rs  extractor.rs  main.rs
apps/daedalus_client/: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml  library-patches.json  package.json
apps/daedalus_client/src/: error.rs  fabric.rs  forge.rs  main.rs  metadata_groups.rs  minecraft.rs  util.rs
apps/labrinth/: .codecov.yml  .dockerignore  .env  .env.docker-compose  .env.example  .env.local  .gitignore  .prettierignore  AGENTS.md  AGENTS.md~HEAD  CLAUDE.md  COPYING.md  Cargo.toml  Dockerfile  README.md  build.rs  buildup.md  curl-analytics-user-projects.sh  package.json
apps/labrinth/.cargo/: config.toml
apps/labrinth/.sqlx/: query-0080a101c9ae040adbaadf9e46fbc457a08e70dcde320c6852074819e41f8ad9.json  query-00a733e8ea78f15743afe6a9d637fa4fb87a205854905fb16cf1b8e715f1e01d.json  query-00d809d1dc9dd1eb2c49ebaac2387f82c5730d835ae1c52d5df23b5f09cd1925.json  query-00ef039799c162e21a8fa5ba7aec2a9044a3028f1cb34e8c9c565a670956d938.json  query-010c69fa61e1329156020b251e75d46bc09344c1846b3098accce5801e571e5e.json  query-010cafcafb6adc25b00e3c81d844736b0245e752a90334c58209d8a02536c800.json  query-011ada1d529754f2e6b8efd6588be6e5ac428593e82b544ec982f6fe9c18cc90.json  query-0127ae8eae1559b640924439bf448506d8461e18403be2a63ae74abcf1f05d8b.json  query-015d9b9191d9fd0a4de36ea8f44a13be89f18c2099ccb80c2fa1d394f681cebc.json  query-020bac2af0493e11368af8f60e1fac7d220fe043b7580d7b0cba74189688fad2.json  query-02843e787de72594e186a14734bd02099ca6d2f07dcc06da8d6d8a069638ca2a.json  query-02a585c845168c1bd8a82c30af351db75597da5456e29efc033ebb098e81e905.json  query-0339cb166cfc7e78fc1269d5d1547a772977b269d6d01a64a1f93acb86f9e411.json  query-0379424a41b12db94c7734086fca5b96c8cdfe0a9f9c00e5c67e6b95a33c8c6b.json  query-03d85f360d4c603688d0662d24caee7b59985adba006fb531beb09f195582277.json  query-042291ae24040d907adfca767efc74e4422645060687135cdc46aadecfbb23d0.json  query-042ddb5fa773bb2b7031bdf75e151761e69bbd12af70bf3b6cc1506394a1ff60.json  query-0461463e3e14f6c8ede5571a2905b8171e8caf4ebbd3ec844ef2cebd83980247.json  query-04ce7057512b313803252064aab1b455f943edb16121823b61fb737c14cb8ad3.json  query-050e755134f6d1f09de805ae2cd0f7ca8f6efb96be9f070c43db7fd2049af2d2.json  query-0545adc0340800b9fb4c23eb5ec2b30d5bba824f80cd25dbf08ca9f86c32ea1f.json  query-055f71ec6d193c5f5259cafc989a04f3f791205e6c2df15c5bf9d5afcf71a76a.json  query-057b0fda8e0ad34fc880121b6461ddfc3c61d4a0bf95e376e24440b6a58d2844.json  query-05b65c44a55654af963329d2fcd68178411e8cfa3f3796d7741637f2c2be4850.json  query-05d26562a95715d65bbb2fd1c4163ebb067931f4c3caeb93601c98f1d533983b.json  query-05e6d018b5e78de0936970d796b1a0beca48c589270c07c17f91005e7b795fd0.json  query-061a3e43df9464263aaf1555a27c1f4b6a0f381282f4fa75cc13b1d354857578.json  query-06a92b638c77276f36185788748191e7731a2cce874ecca4af913d0d0412d223.json  query-06baf2712b15a932c1fa9f4b5fc8fa774579b98479f33d39d9ef260487326343.json  query-06bf1b34b70f5e61bf619c4d7706d07d6db413751ecab86896a708c8539e38b6.json  query-06bfc01bafa2db73eb049f268eb9f333aeeb23a048ee524b278fe184e2d3ae45.json  query-06f51ba9bfc8ddf76c3ac2ad0a93849a3ff19649835bcdb1d44697d9a229725a.json  query-074ec090856894ae86834e3c5202e653c2a418c27d6a8fdde10f0b727ab9fd89.json  query-079846a1e6a6b080e0e7f2e3efbb53b6526332433faf66de8716bc5cd2b12afd.json  query-07dff8c7711178f10bf85271287704deb72636f4cbd6927108aadfd6e0d63f1c.json  query-080e2f0068c0c1c248dcfacf39798aefed70d9a61610fc7f4f1c8f291706fa4a.json  query-08310363d63462bf1d07f950f09b8e3b466c7d6fd7a6efd3984a3cbc87f996bc.json  query-083340292899d383a307700ada8bb51d2f23aacd5fb04819906875bd3851feb7.json  query-08549cef5bb40c6a463e87f5a091cfd0ea106c19b297bbccc466aa04b19b742c.json  query-0867c10a6e4a2f259c957abfbc8696ef9be817baed61a8b515a07733f9be2f83.json  (+947 more)
apps/labrinth/fixtures/: analytics-changes-clickhouse.sql  delphi-report-2025-11-15.sql  (+11 more)
daedalus/: .#Cargo.toml  Cargo.toml  README.md
daedalus/src/: fabric.rs  forge.rs  lib.rs  minecraft.rs  modded.rs
daedalus_client/: Cargo.toml  library-patches.json
daedalus_client/src/: fabric.rs  forge.rs  main.rs  minecraft.rs  neo.rs  quilt.rs  util.rs
theseus/: Cargo.toml
theseus/examples/: download-pack.rs
theseus/src/: config.rs  error.rs  lib.rs  logger.rs  meta.rs  util.rs
theseus/src-old/: util.rs
theseus_cli/: Cargo.toml
theseus_cli/src/: #error_handler.rs#  main.rs  util.rs
theseus_daemon/: Cargo.toml  README.md  build.rs
theseus_daemon/src/: main.rs
theseus_gui/src-tauri/: App.entitlements  Cargo.toml  Info.plist  build.js  build.rs  export  tauri.conf.json  tauri.macos.conf.json
theseus_playground/: Cargo.toml  link_test.html
theseus_playground/src/: auth_test.rs  main.rs
(+4744 files in other folders)
