[workspace]
resolver = '2'
members = [
  './packages/app-lib',
	'./apps/app-playground',
  './apps/app'
]

# Optimize for speed and reduce size on release builds
[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols

[profile.dev.package.sqlx-macros]
opt-level = 3

[patch.crates-io]
wry = { git = "https://github.com/modrinth/wry", rev = "27fb16b" }
