[workspace]
resolver = '2'
members = [
  './packages/app-lib',
  './apps/app-playground',
  './apps/labrinth',
  './apps/daedalus_client',
  './packages/daedalus',
]

# Optimize for speed and reduce size on release builds
[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols

[profile.dev.package.sqlx-macros]
opt-level = 3

[source.crates-io]
replace-with = "ustc"

[source.ustc]
registry = "https://mirrors.ustc.edu.cn/crates.io-index"
[registries]
ustc = { index = "https://mirrors.ustc.edu.cn/crates.io-index" }