[package]
name = "daedalus_client"
version = "0.1.10"
authors = ["Jai A <jaiagr+gpg@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
daedalus = { path = "../daedalus" }
tokio = { version = "1", features = ["full"] }
futures = "0.3.17"
dotenv = "0.15.0"
log = "0.4.8"
env_logger="0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
thiserror = "1.0"
reqwest = "0.11.4"
zip = "0.5.13"
semver = "1.0"
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.1.0"

rusoto_core = "0.47.0"
rusoto_s3 = "0.47.0"
