[package]
name = "theseus"
version = "0.6.3"
authors = ["Jai A <jaiagr+gpg@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
theseus_macros = { path = "../theseus_macros" }

bytes = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_ini = "0.2.0"
toml = "0.7.3"
sha1 = { version = "0.6.1", features = ["std"]}
sha2 = "0.9.9"
url = "2.2"
uuid = { version = "1.1", features = ["serde", "v4"] }
zip = "0.6.5"
async_zip = { version = "0.0.13", features = ["full"] }
flate2 = "1.0.27"
tempfile = "3.5.0"
urlencoding = "2.1.3"


chrono = { version = "0.4.19", features = ["serde"] }
daedalus = { version = "0.1.25" }
dirs = "5.0.1"

regex = "1.5"
sys-info = "0.9.0"
sysinfo = "0.29.9"
thiserror = "1.0"

tracing = "0.1.37"
tracing-subscriber = {version = "0.2", features = ["chrono"]}
tracing-error = "0.1.0"
tracing-appender = "0.1"

paste = { version = "1.0"}

tauri = { version = "1.2", optional = true}
indicatif = { version = "0.17.3", optional = true }

async-tungstenite = { version = "0.22.1", features = ["tokio-runtime", "tokio-native-tls"] }
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["fs"] }
async-recursion = "1.0.4"

notify = { version = "5.1.0", default-features = false }
notify-debouncer-mini = { version = "0.2.1", default-features = false }

lazy_static = "1.4.0"
dunce = "1.0.3"

whoami = "1.4.0"

discord-rich-presence = "0.2.3"

[target.'cfg(windows)'.dependencies] 
winreg = "0.50.0"

[features]
tauri = ["dep:tauri"]
cli = ["dep:indicatif"]