[package]
name = "theseus_cli"
version = "0.1.0"
authors = ["Jai A <jaiagr+gpg@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
theseus = { path = "../theseus" }
daedalus = {version = "0.1.15", features = ["bincode"]}
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["fs"] }
futures = "0.3"
argh = "0.1"
paris = { version = "1.5", features = ["macros", "no_logger"] }
dialoguer = "0.10"
eyre = "0.6"
tabled = "0.5"
dirs = "4.0"
uuid = {version = "0.8", features = ["v4", "serde"]}
url = "2.2"
# TODO: merge logging with paris logging
pretty_env_logger = "0.4"
log = "0.4.14"
webbrowser = "0.7"