[package]
name = "theseus_daemon"
version = "0.1.0"
edition = "2018"

[dependencies]
tonic = "^0.5.0"
prost = "^0.8.0"
futures = "^0.3.16"
async-stream = "^0.3.2"
rand = "^0.8.4"
uuid = "^0.8.2"
theseus = { path = "../theseus" }

[dependencies.tokio]
version = "^1.9.0"
default-features = false
features = ["macros", "rt-multi-thread"]

[build-dependencies]
tonic-build = "^0.5.0"
