[package]
name = "ariadne-extract"
version = "0.1.0"
edition.workspace = true

[dependencies]
clap.workspace = true
thiserror.workspace = true

serde_json.workspace = true
serde.workspace = true

syn = { workspace = true, features = ["visit"] }
syn-miette.workspace = true
miette = { workspace = true, features = ["syntect-highlighter"] }
walkdir.workspace = true

[lints]
workspace = true
