[package]
name = "ariadne-extract"
version = "0.1.0"
edition.workspace = true

[dependencies]
clap = { workspace = true }
derive_more = { workspace = true, features = ["display"] }
miette = { workspace = true, features = ["syntect-highlighter"] }
proc-macro2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
syn = { workspace = true, features = ["visit"] }
syn-miette = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }

[lints]
workspace = true
