[package]
name = "daedalus_client"
version = "0.2.2"
authors = ["Jai A <jai@modrinth.com>"]
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async_zip = { workspace = true, features = [
  "bzip2",
  "chrono",
  "deflate",
  "deflate64",
  "tokio-fs",
  "zstd",
] }
bytes = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
daedalus = { workspace = true }
dashmap = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
itertools = { workspace = true }
reqwest = { workspace = true, features = [
  "json",
  "rustls-tls-native-roots",
  "stream",
] }
rust-s3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-xml-rs = { workspace = true }
sha1_smol = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[lints]
workspace = true
